# openai_agents_sdk_assignments_piaic

./: readme.md
Assignment5/chainlit-liteLLM/: main.py  pyproject.toml  req.txt
Assignment6/chainlit_agent/: README.md
